--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>UralCTF</title>
+    <title>TymenCTF</title>
     <link rel="shortcut icon" href="/static/images/UpperLeftLogo.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="./TyumenCTF_files/openapi.js.Без названия"></script>
